# example-fastapi-app-sqlalchemy-pytest

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
app/: db.py  main.py  models.py  settings.py
app/api/: api.py  dependencies.py
app/api/endpoints/: athlete.py  base.py  medal.py
app/crud/: athlete.py  base.py  medal.py
app/schemas/api_schemas/: athlete.py  connected.py  medal.py
app/schemas/utility_schemas/: event.py  game.py  sport.py  team.py
app/utilities/: custom_typing_types.py  endpoints_helpers.py  enums.py
db_load/: load.py
db_load/data/: athletes.json  events.json  games.json  medals.json  sport.json  teams.json
tests/: conftest.py  fixtures.py  models_factories.py  schemas_factories.py  test_crud.py  test_endpoints.py  test_models.py
