[tool.poetry]
name = "app"
version = "0.0.1"
description = "example fastapi project (sqlalchemy + pytest)"
authors = ["mariavalieva <movalieva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.36"}
uvicorn = "^0.17.6"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-factoryboy = "^2.2.0"
pydantic-factories = "^1.2.8"
requests = "^2.27.1"
coverage = "^6.3.2"
pylint = "^2.13.8"
flake8 = "^4.0.1"
mypy = "^0.950"
isort = "^5.10.1"

[tool.pylint.master]
disable = "C0114, C0115, C0116"
ignore = "json"
good-names = "db, id, f, q, i"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
